--- a/templates/actor/player.html
+++ b/templates/actor/player.html
@@ -63,7 +63,7 @@
                                 <input class="health-input" title="{{localize 'CLEENMAIN.health.current'}}" id="health" name="data.health.value" type="number" value="{{data.health.value}}"/>
                                 <div class="central-text">/</div>
                                 {{#if unlocked}}
-                                    <input title="{{localize "CLEENMAIN.health.max"}}" id="health" name="data.health.max" type="number" value="{{data.health.max}}"/>
+                                    <input class="health-input" title="{{localize "CLEENMAIN.health.max"}}" id="health" name="data.health.max" type="number" value="{{data.health.max}}"/>
                                 {{else}}
                                     <div class="central-text">{{data.health.max}}</div>
                                 {{/if}}
