--- a/templates/actor/tab/combat.html
+++ b/templates/actor/tab/combat.html
@@ -34,7 +34,7 @@
             <div class="trainings-name">{{localize "CLEENMAIN.armor.category.shield"}}</div>
         </div>
     </div>
-    <div class="armors">
+    <div class="items armors droppable">
         <table>
             <tr>
                 <th>{{localize "CLEENMAIN.label.armors"}}</th>
@@ -44,8 +44,8 @@
                 <th>{{localize "CLEENMAIN.armor.special"}}</th>
                 <th></th>
             </tr> 
-            {{#each armors as |item id|}}  <tr class="item droppable" data-item-id="{{_id}}"></tr>
-            <tr class="item" data-item-id="{{_id}}">
+            {{#each armors as |item id|}}  <tr class="item" data-item-id="{{_id}}"></tr>
+                <tr class="item" data-item-id="{{_id}}">
                     <th>{{name}}</th>
                     <th>{{getCategoryLabel "armor" item.data.category}}</th>
                     <th>{{item.data.protection}}</th>
@@ -53,8 +53,8 @@
                     <th>{{item.data.special}}</th>
                     {{#if ../unlocked}}
                         <th>
-                            <a class="item-open-sheet" data-type="armor" data-id="{{item.id}}" title="{{localize 'CLEENMAIN.sheet.edit'}}"><i class="fas fa-pen"></i></a>
-                            <a class="inline-delete" data-type="armor" data-id="{{item.id}}" title="{{localize 'CLEENMAIN.sheet.delete'}}"><i class="fas fa-trash"></i></a>
+                            <a class="item-open-sheet" title="{{localize 'CLEENMAIN.sheet.edit'}}"><i class="fas fa-pen"></i></a>
+                            <a class="inline-delete" title="{{localize 'CLEENMAIN.sheet.delete'}}"><i class="fas fa-trash"></i></a>
                         </th>
                     {{/if}}
                 </tr>
@@ -105,7 +105,7 @@
             {{/if}}
         </div>
     </div>
-    <div class="items weapons">
+    <div class="items weapons droppable">
         <table>
             <thead>
                 <tr>
@@ -121,7 +121,7 @@
                 </tr>
             </thead>
             {{#each weapons as |item id|}}
-                <tr class="item droppable" data-item-id="{{_id}}">
+                <tr class="item" data-item-id="{{_id}}">
                     <th>{{name}}</th>
                     <th>{{getCategoryLabel "weapon" item.data.category}}</th>
                     <th>{{item.data.skillName}}</th>
@@ -138,8 +138,8 @@
                     </th>
                     <th>
                         {{#if ../unlocked}}
-                            <a class="item-open-sheet" data-type="weapon" title="{{localize 'CLEENMAIN.sheet.edit'}}"><i class="fas fa-pen"></i></a>
-                            <a class="inline-delete" data-type="weapon" title="{{localize 'CLEENMAIN.sheet.delete'}}"><i class="fas fa-trash"></i></a>
+                            <a class="item-open-sheet" title="{{localize 'CLEENMAIN.sheet.edit'}}"><i class="fas fa-pen"></i></a>
+                            <a class="inline-delete" title="{{localize 'CLEENMAIN.sheet.delete'}}"><i class="fas fa-trash"></i></a>
                         {{/if}}
                     </th>
                 </tr>
