--- a/templates/chat/rolldialog.html
+++ b/templates/chat/rolldialog.html
@@ -42,13 +42,13 @@
         <input type="number" id="caution" name="caution" min="0" max="10" value="0"/>
         <span class="tooltiptext">{{localize "CLEENMAIN.bonus.caution.description"}}</span>
       </div>
-      <!-- Règles avancées
-      <div class="bonus-line tooltip">
-        <label for="quick">{{localize "CLEENMAIN.bonus.quick.label"}}</label>
-        <input type="number" id="quick" name="quick" min="0" max="1" value="0"/>
-        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.quick.description"}}</span>
-      </div>
-      -->
+      {{#if (isSettingEnabled "advancedRules")}}
+        <div class="bonus-line tooltip">
+          <label for="quick">{{localize "CLEENMAIN.bonus.quick.label"}}</label>
+          <input type="number" id="quick" name="quick" min="0" max="1" value="0"/>
+          <span class="tooltiptext">{{localize "CLEENMAIN.bonus.quick.description"}}</span>
+        </div>      
+      {{/if}}
     </div>
     <div class="bonus">
       <h2>{{localize "CLEENMAIN.dialog.penalty"}}</h2>
@@ -73,14 +73,14 @@
         <label for="risk">{{localize "CLEENMAIN.penalty.risk.label"}}</label>
         <input type="number" id="risk" name="risk" min="0" max="1" value="{{action.risk}}"/>
         <span class="tooltiptext">{{localize "CLEENMAIN.penalty.risk.description"}}</span>
-      </div>
-      <!-- Règles avancées
-      <div class="bonus-line tooltip">
-        <label for="slowness">{{localize "CLEENMAIN.penalty.slowness.label"}}</label>
-        <input type="number" id="slowness" name="slowness" min="0" max="10" value="0"/>
-        <span class="tooltiptext">{{localize "CLEENMAIN.penalty.slowness.description"}}</span>
-      </div>
-    -->
+      </div>      
+      {{#if (isSettingEnabled "advancedRules")}}      
+        <div class="bonus-line tooltip">
+          <label for="slowness">{{localize "CLEENMAIN.penalty.slowness.label"}}</label>
+          <input type="number" id="slowness" name="slowness" min="0" max="10" value="0"/>
+          <span class="tooltiptext">{{localize "CLEENMAIN.penalty.slowness.description"}}</span>
+        </div>
+      {{/if}}
     </div>
   {{/if}}
 </div>
