--- a/less/tab/player-equipment.less
+++ b/less/tab/player-equipment.less
@@ -14,6 +14,7 @@
     .equipment-column{
         display: flex;
         flex-direction: column;
+        min-height: 400px;
         .equipment-line{
             display: flex;
             flex-direction: row;
